Adjust the styling in the powered by section of the footer

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -95,4 +95,11 @@ button {
   h1 {
     font-size: 20px;
   }
+
+  table {
+    td {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
 }
