Make the title of the application a link, because it seems weird if it is not

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,10 @@ header {
   width: $content-width;
   margin: auto;
   color: $white;
+
+  a:link { color: $white; text-decoration: none; }
+  a:visited { color: $white; }
+  a:hover { color: $white; text-decoration: none; }
 }
 
 #title {
