--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 <body>
 
 <header>
-  <h1 id="title">AuroraAlarm</h1>
+  <h1 id="title"><%= link_to 'AuroraAlarm', root_path %></h1>
   <nav>
     <%= link_to 'How does it work?', '#how_does_it_work' %>
     <%= link_to 'About', '#about' %>
