--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -47,7 +47,7 @@
   <p>AuroraAlarm was created by and is maintained by <%= link_to 'John Wood', 'http://johnpwood.net' %>.</p>
   <p>
     I have always enjoyed watching the weather and the stars.  However, I'm not much of a night owl, and
-    every attempt I've made to say up late enough to see an Aurora after a solar event has failed, miserably.
+    every attempt I've made to stay up late enough to see an Aurora after a solar event has failed, miserably.
     Time and time again I would fall asleep, and wake up to find that the conditions were great for viewing
     an Aurora the night before.
   </p>
