Fix instructions for updating your zipcode

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -131,7 +131,7 @@
   <div>
     <a name="how_to_update_zipcode"></a>
     <p class="question">How do I update my zipcode?</p>
-    <p>You can update your zipcode at any time by texting <strong>AURORA <zipcode></strong> to 839863. (ex. AURORA 90210)</p>
+    <p>You can update your zipcode at any time by texting <strong>AURORA</strong> followed by your zipcode to 839863. (ex. AURORA 90210)</p>
   </div>
 
   <div>
