Move from Signal short code to Twilio phone number

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -110,14 +110,10 @@
     <a name="us_only_explanation"></a>
     <p class="question">Why is this service only available to US residents?</p>
     <p>
-      I'm a software engineer at <a href="http://www.signalhq.com">Signal</a>, a digital marketing company
-      that specializes in SMS, email, and social marketing tools.  Signal sends a whole lot of SMS messages
-      for our customers, and we get a great per-message rate from our aggregator as a result (meaning, I can
-      use the service for free since it barely costs the company anything at this small volume).  Unfortunately,
-      our aggregator only delivers messages in the US.
-    </p>
-    <p>
-      If you're aware of an SMS aggregator that I could use for free to deliver SMS messages internationally,
+      AuroraAlarm uses services provided by the <a href="http://www.noaa.gov/">NOAA</a> to determine
+      current local weather conditions.  This information is currently limited to the US.  We are
+      looking for a free global weather service that AuroraAlarm can use determine current local weather
+      conditions for those living outside of the US. If you're aware of such a service,
       please drop me a line at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.
     </p>
   </div>
@@ -125,13 +121,13 @@
   <div>
     <a name="how_to_cancel"></a>
     <p class="question">How do I cancel this service?</p>
-    <p>You can cancel the service at any time by texting <strong>STOP</strong> to 839863.</p>
+    <p>You can cancel the service at any time by texting <strong>STOP</strong> to 312-386-5114.</p>
   </div>
 
   <div>
     <a name="how_to_update_zipcode"></a>
     <p class="question">How do I update my zipcode?</p>
-    <p>You can update your zipcode at any time by texting <strong>AURORA</strong> followed by your zipcode to 839863. (ex. AURORA 90210)</p>
+    <p>You can update your zipcode at any time by texting <strong>AURORA</strong> followed by your zipcode to 312-386-5114. (ex. AURORA 90210)</p>
   </div>
 
   <div>
