Use Ruby 1.9 hash syntax

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
   <title>AuroraAlarm</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= stylesheet_link_tag    "mobile", :media => "only screen and (max-device-width: 800px) and (min-device-width: 320px)" %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= stylesheet_link_tag    "mobile", media: "only screen and (max-device-width: 800px) and (min-device-width: 320px)" %>
   <!--[if IE]><%= stylesheet_link_tag  "ie" %><![endif]-->
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
