--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -11,7 +11,7 @@
       <% if @message.present? %>
         <span id="signup_message"><%= @message %></span>
       <% else %>
-        <%= render :partial => 'signup_form' %>
+        <%= render partial: 'signup_form' %>
       <% end %>
     </div>
   </div>
