--- a/app/views/site/signup_error.js.erb
+++ b/app/views/site/signup_error.js.erb
@@ -1,2 +1,2 @@
-<% content = escape_javascript(render(:partial => 'signup_form')) %>
+<% content = escape_javascript(render(partial: 'signup_form')) %>
 $('#signup_form').html("<%= content %>");
