--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -59,100 +59,91 @@
   <a name="faq"></a>
   <h2>FAQ</h2>
   <ul id="faq_links">
-    <li><%= link_to "What are the costs associated with the service?", "#what_are_the_costs" %></li>
-    <li><%= link_to "Will this service wake me up in the middle of the night?", "#wake_me_up" %></li>
-    <li><%= link_to "If you wake me up, does that mean I'll see the Aurora for sure?", "#see_aurora_for_sure" %></li>
-    <li><%= link_to "Why is this service only available to US residents?", "#us_only_explanation" %></li>
-    <li><%= link_to "How do I cancel this service?", "#how_to_cancel" %></li>
-    <li><%= link_to "How do I update my zipcode?", "#how_to_update_zipcode" %></li>
-    <li><%= link_to "What do you do with my mobile phone number and location information?", "#privacy" %></li>
-    <li><%= link_to "Who do I contact if I have any questions, comments, or concerns?", "#who_can_i_contact" %></li>
+    <li>
+      <%= link_to "What are the costs associated with the service?", "#" %>
+      <div>
+        <p>
+           This service is free to use.  However, it uses SMS (text messaging) to notify you of
+           certain events, and expects a reply in certain scenarios.  Your cell phone provider
+           may charge you for incoming and outgoing SMS messages.
+        </p>
+      </div>
+    </li>
+    <li>
+    <%= link_to "Will this service wake me up in the middle of the night?", "#" %>
+      <div>
+        <p>
+          Yes, and that's the point!  The best time for viewing Auroras are in the hours past midnight.
+          But, we always ask you after a solar event has occurred if you would like to be woken up
+          over the next few days if conditions are optimal for viewing an Aurora.  If it's not
+          a good time, you can always decline, and we'll notify you when the next solar event occurs.
+        </p>
+        <p>
+          In addition, we'll only notify you if the conditions are optimal for viewing the Aurora in your area.  If the sky is cloudy, we won't
+          wake you.  Moon to bright?  We won't wake you.  This algorithm is constantly being enhanced to
+          reduce the chances of waking you up for no reason.
+        </p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "If you wake me up, does that mean I'll see the Aurora for sure?", "#" %>
+      <div>
+        <p>
+          Sadly, no.  Ambient light (city lights, etc) prevents many from seeing the Aurora.  And,
+          there is no good way that I know of to detect the amount of ambient light for your location.
+          So, even if all of the other conditions are perfect, you may still be unable to see the
+          Aurora due to the amount of ambient light in your area.
+        </p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "Why is this service only available to US residents?", "#" %>
+      <div>
+        <p>
+          I'm good friends with the folks at <a href="http://www.signalhq.com">Signal</a>, a digital marketing company
+          that specializes in SMS, email, and social marketing tools.  Signal is graciously allowing me to use their
+          SMS service for free to power AuroraAlarm.  Unfortunately, the SMS aggregator they use only delivers messages
+          in the US.
+        </p>
+        <p>
+          If you're aware of an SMS aggregator that I could use for free to deliver SMS messages internationally,
+          please drop me a line at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.
+        </p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "How do I cancel this service?", "#" %>
+      <div>
+        <p>You can cancel the service at any time by texting <strong>STOP</strong> to 839863.</p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "How do I update my zipcode?", "#" %>
+      <div>
+        <p>You can update your zipcode at any time by texting <strong>AURORA</strong> followed by your zipcode to 839863. (ex. AURORA 90210)</p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "What do you do with my mobile phone number and location information?", "#" %>
+      <div>
+        <p>
+          We use your location information to determine if conditions are right for viewing the Aurora in your area, and we use your mobile
+          phone number to send you a text message when they are.  That's it. We won't sell, trade, exchange, hock, auction, vend, expose,
+          or barter any of the information we collect.  We respect your privacy, because we love it when people respect ours.
+        </p>
+        <p>
+          If you decide to cancel the service, all information we have about you is immediately and permanently deleted from our database,
+          except for any SMS messages that were sent or received.  All SMS messages are deleted two weeks after they are sent or received, giving
+          us time to investigate any issues that may be reported.
+        </p>
+      </div>
+    </li>
+    <li>
+      <%= link_to "Who do I contact if I have any questions, comments, or concerns?", "#" %>
+      <div>
+        <p>You can reach me, John Wood, at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.</p>
+      </div>
+    </li>
   </ul>
-
-  <div>
-    <a name="what_are_the_costs"></a>
-    <p class="question">What are the costs associated with this service?</p>
-    <p>
-       This service is free to use.  However, it uses SMS (text messaging) to notify you of
-       certain events, and expects a reply in certain scenarios.  Your cell phone provider
-       may charge you for incoming and outgoing SMS messages.
-    </p>
-  </div>
-
-  <div>
-    <a name="wake_me_up"></a>
-    <p class="question">Will this service wake me up in the middle of the night?</p>
-    <p>
-      Yes, and that's the point!  The best time for viewing Auroras are in the hours past midnight.
-      But, we always ask you after a solar event has occurred if you would like to be woken up
-      over the next few days if conditions are optimal for viewing an Aurora.  If it's not
-      a good time, you can always decline, and we'll notify you when the next solar event occurs.
-    </p>
-    <p>
-      In addition, we'll only notify you if the conditions are optimal for viewing the Aurora in your area.  If the sky is cloudy, we won't
-      wake you.  Moon to bright?  We won't wake you.  This algorithm is constantly being enhanced to
-      reduce the chances of waking you up for no reason.
-    </p>
-  </div>
-
-  <div>
-    <a name="see_aurora_for_sure"></a>
-    <p class="question">If you wake me up, does that mean I'll see the Aurora for sure?</p>
-    <p>
-      Sadly, no.  Ambient light (city lights, etc) prevents many from seeing the Aurora.  And,
-      there is no good way that I know of to detect the amount of ambient light for your location.
-      So, even if all of the other conditions are perfect, you may still be unable to see the
-      Aurora due to the amount of ambient light in your area.
-    </p>
-  </div>
-
-  <div>
-    <a name="us_only_explanation"></a>
-    <p class="question">Why is this service only available to US residents?</p>
-    <p>
-      I'm a software engineer at <a href="http://www.signalhq.com">Signal</a>, a digital marketing company
-      that specializes in SMS, email, and social marketing tools.  Signal sends a whole lot of SMS messages
-      for our customers, and we get a great per-message rate from our aggregator as a result (meaning, I can
-      use the service for free since it barely costs the company anything at this small volume).  Unfortunately,
-      our aggregator only delivers messages in the US.
-    </p>
-    <p>
-      If you're aware of an SMS aggregator that I could use for free to deliver SMS messages internationally,
-      please drop me a line at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.
-    </p>
-  </div>
-
-  <div>
-    <a name="how_to_cancel"></a>
-    <p class="question">How do I cancel this service?</p>
-    <p>You can cancel the service at any time by texting <strong>STOP</strong> to 839863.</p>
-  </div>
-
-  <div>
-    <a name="how_to_update_zipcode"></a>
-    <p class="question">How do I update my zipcode?</p>
-    <p>You can update your zipcode at any time by texting <strong>AURORA</strong> followed by your zipcode to 839863. (ex. AURORA 90210)</p>
-  </div>
-
-  <div>
-    <a name="privacy"></a>
-    <p class="question">What do you do with my mobile phone number and location information?</p>
-    <p>
-      We use your location information to determine if conditions are right for viewing the Aurora in your area, and we use your mobile
-      phone number to send you a text message when they are.  That's it. We won't sell, trade, exchange, hock, auction, vend, expose,
-      or barter any of the information we collect.  We respect your privacy, because we love it when people respect ours.
-    </p>
-    <p>
-      If you decide to cancel the service, all information we have about you is immediately and permanently deleted from our database,
-      except for any SMS messages that were sent or received.  All SMS messages are deleted two weeks after they are sent or received, giving
-      us time to investigate any issues that may be reported.
-    </p>
-  </div>
-
-  <div>
-    <a name="who_can_i_contact"></a>
-    <p class="question">Who do I contact if I have any questions, comments, or concerns?</p>
-    <p>You can reach me, John Wood, at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.</p>
-  </div>
 </section>
 
