Try fixing the background image on heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,7 @@ a:hover {
 }
 
 body {
-  background: url(aurora.jpeg) no-repeat center center fixed; 
+  background: image-url("aurora.jpeg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
