Explain what "clear skies" and "a dark moon" mean

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -37,8 +37,8 @@
       <ul>
         <li>Dark. Likely in the hours past midnight.</li>
         <li>A <%= link_to 'Kp index', 'http://en.wikipedia.org/wiki/K-index' %> strong enough to push the Aurora down to your <%= link_to 'geomagnetic latitude', 'http://en.wikipedia.org/wiki/Geomagnetic_latitude' %>.</li>
-        <li>Clear skies.</li>
-        <li>A dark moon.</li>
+        <li>Clear skies (cloud coverage 20% or less).</li>
+        <li>A dark moon (before the first quarter or after the third quarter).</li>
       </ul>
     </p>
 
