--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -38,7 +38,9 @@
         <li>Dark. Likely in the hours past midnight.</li>
         <li>A <%= link_to 'Kp index', 'http://en.wikipedia.org/wiki/K-index' %> strong enough to push the Aurora down to your <%= link_to 'geomagnetic latitude', 'http://en.wikipedia.org/wiki/Geomagnetic_latitude' %>.</li>
         <li>Clear skies (cloud coverage 20% or less).</li>
-        <li>A dark moon (before the first quarter or after the third quarter).</li>
+        <% if Aurora::Application.config.consider_moonlight %>
+          <li>A dark moon (before the first quarter or after the third quarter).</li>
+        <% end %>
       </ul>
     </p>
 
@@ -80,7 +82,7 @@
         </p>
         <p>
           In addition, we'll only notify you if the conditions are optimal for viewing the Aurora in your area.  If the sky is cloudy, we won't
-          wake you.  Moon to bright?  We won't wake you.  This algorithm is constantly being enhanced to
+          wake you.  Sun about to rise?  We won't wake you.  This algorithm is constantly being enhanced to
           reduce the chances of waking you up for no reason.
         </p>
       </div>
